--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 						<h1><a href="index.html">未来的不完美</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
+								<li><a href="#">个人随笔</a></li>
+								<li><a href="#">音乐分享</a></li>
+								<li><a href="#">码农生涯</a></li>
+								<li><a href="#">共享资源</a></li>
 								<li><a href="#">Adipiscing</a></li>
 							</ul>
 						</nav>
