--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src="http://39.108.211.61/public/static/index/Img/audio/niubi.jpg" alt="" /></a>
 								<header>
-									<h2>Future Imperfect</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>未来的不完美</h2>
+									<p>这世界不是你努力就能成功的</p>
 								</header>
 							</section>
 
